# wav-ctk

./: .gitignore  package.json  vite.config.js
release/: metadata.json
src/: Wave.svelte  main.js  recipe.js  store.js  styles.css  utils.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/ext/: Button.svelte  Pan.svelte  SafeInput.svelte  Tabs.svelte  Volume.svelte
src/lib/: ColorFile.svelte  FilePicker.svelte  Key.svelte  Keyboard.svelte  PadSpace.svelte  Recipe.svelte  RecipeDev.svelte  SampleEdit.svelte
src/scripts/: inputKnobs.js
